tests/snapshots/insta_tests__insta@assign.coff.snap
---
source: tests/insta_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), Some(&spans), None)"

---
[0..3] fun [4..5] a [5..6] ()  [7..36] {
	([14..15] a [16..17] = [18..21] #123)
	[27..34] Err: [27..28] Expression not assignable.
}
