tests/snapshots/insta_tests__insta@expr_parsing.coff.snap
---
source: tests/insta_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None)"

---
fun a ()  {
	((#1 + #2) - (#3 ** #4))
	(#5 - ((#6 / #7) % #8))
	((#1 * #2) * #3)
	(#1 ** (#2 ** #3))
}
