tests/snapshots/insta_tests__insta@function_with_blocks.coff.snap
---
source: tests/insta_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None)"

---
fun asd ()  {
	{
		{
			#1
		}
		{
			Err: Expected prefix token.
		}
		{
			#3
		}
	}
}
