tests/snapshots/insta_tests__insta@multiple_functions_one_error.coff.snap
---
source: tests/insta_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None)"

---
fun d ()  {
	#2
}
Err: Expected token Identifier.
fun asd ()  {
	#3
}
