tests/snapshots/insta_tests__insta@parameter_and_return_test.coff.snap
---
source: tests/insta_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None)"

---
fun asd (parm1 : Tt1, param2 : Tt2) -> i32 {
	
}
