tests/snapshots/insta_tests__insta@simple_function.coff.snap
---
source: tests/insta_tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None)"

---
fun asd ()  {
	(#2 + #3)
	#2
}
